<resources>
    <string name="app_name">PREPciudadano</string>
    <string name="login">Entrar</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="hello">:)</string>
    <string name="upload_photo">Subir Foto</string>
    <string name="pre_photo_subtitle">Considera esto antes de subir una fotografía</string>
    <string name="pre_photo_list_1">- Tener buena luz</string>
    <string name="pre_photo_list_2">- Que se pueda leer el texto</string>
    <string name="pre_photo_list_3">- No mover la cámara</string>
    <string name="about_us"><![CDATA[
        Somos un pequeño grupo de programadores que están interesados en brindar a la ciudadanía, herramientas, recursos y medios para participar
        de manera más profunda en las decisiones de nuestro país.\n\nNuestro objetivo es crecer el nombre de nuestra marca GarnachaSoft dedicada a innovar en el terreno de las aplicaciones de todo tipo, pero sobre todo
        de las aplicaciones que faciliten el acceso a la información pública
    ]]></string>
    <string name="donations"><![CDATA[
        Las donaciones, son una ayuda muy valiosa para nosotros ya que no contamos con recursos gubernamentales ni empresariales\nEl gasto total de servidores y
        servicios será cubierto enteramente por 2 ciudadanos, por lo que agradecemos enormemente su apoyo a la cuenta personal de Paypal de uno de ellos.\nLas donaciones serán publicadas,
        así como los gastos generados por el consumo de servicios, en caso de que las donaciones superen los gastos, estas serán retornadas a los donadores.
    ]]></string>

    <string name="open">Abierto</string>
    <string name="close">Cerrado</string>
</resources>
